--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -619,7 +619,6 @@
 <dt>Child care expenses</dt>
 <dd><p>Report amounts if you paid daycare subsidies using code 028.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/child-expenses.html">Child care expenses</a></p></dd>
-</dl>
 
 <dt>Travel benefit, including medical travel assistance</dt>
 <dd><p>Report the total amount if you paid for:</p>
@@ -808,9 +807,7 @@
 </li>
 <li class="code-num">
  <details >  <summary>Code 116 – Medical travel assistance</summary> 
-   <p id="cd116">If an employee usually lives in a prescribed zone and works at a special work site in a prescribed zone, a third party providing the benefit must report any non-business travel assistance (including medical travel assistance) in Other information using code 028. </p>
-   <p>Separate the medical travel from the other non-business travel. Report the medical travel amount in Other information using code 116.</p>
-<p>Employees who are eligible to claim the northern residents deduction for travel benefits will use the information included in boxes 32 and 33 of their T4 slip to correctly calculate their deduction on form T2222, Northern Residents Deductions for 2021.</p>
+   <p id="cd116">Report the amount of the <strong>medical portion only</strong> you paid for medical travel assistance in a prescribed zone, using code 116 <strong>and</strong> the total amount of the travel benefit using <a href="#cd028">code 028</a>.</p>
 
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 
