--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -621,11 +621,8 @@
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/child-expenses.html">Child care expenses</a></p></dd>
 
 <dt>Travel benefit, including medical travel assistance</dt>
-<dd><p>Report the total amount if you paid for:</p>
-<ul>
- <li> Travel benefit using code 028</li>
- <li> Medical travel assistance in a prescribed zone, using code 028 <strong>and</strong> <a href="#cd116">code 116</a> for the medical portion only</li>
-</ul>
+<dd><p>Report the total amount of the travel benefit using code 028. </p>
+<p>If you paid for medical travel assistance in a prescribed zone, report the total amount of the travel benefit using code 028 <strong>and</strong> <a href="#cd116">code 116</a> for the medical portion only</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
 </dl>
 
