--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -601,7 +601,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 028 –&nbsp;Other income <span class="label label-success">Rewrite done</span>  </summary> 
+ <details> <summary>Code 028 –&nbsp;Other income <span class="label label-warning">Jeremiah</span>  </summary> 
   <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip if either:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
@@ -803,7 +803,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 116 – Medical travel assistance</summary> 
+ <details >  <summary>Code 116 – Medical travel assistance <span class="label label-warning">Jeremiah</span></summary> 
    <p id="cd116">Report the amount of the <strong>medical portion only</strong> you paid for medical travel assistance in a prescribed zone, using code 116 <strong>and</strong> the total amount of the travel benefit using <a href="#cd028">code 028</a>.</p>
 
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
