--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -244,7 +244,7 @@
 
 
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/prescribed-salary-deferral-plans-arrangements.html">Payments related to salary deferral arrangements</a> </td>
+                           <td><a href="deferral.html">Payments related to salary deferral arrangements</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                        
