--- a/payroll/calculate/payment/deferral.html
+++ b/payroll/calculate/payment/deferral.html
@@ -262,7 +262,7 @@
 </nav>
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Payments related to salary deferral arrangements</h1>
-<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/prescribed-salary-deferral-plans-arrangements.html">Prescribed salary deferral plans or arrangements</a> </p>
+<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/prescribed-salary-deferral-plans-arrangements.html">Prescribed salary deferral plans or arrangements</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/salary-deferral-arrangements.html">Salary deferral arrangements</a></p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
                      <li><a href="">Add if necessary</a></li>
