--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -798,8 +798,10 @@
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd115">Report instalment or annuity payments you made under a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>         
+
  </details> 
 </li>
 <li class="code-num">
@@ -890,7 +892,8 @@
 <li class="code-num">
  <details>  <summary>Code 129 – Tax deferred cooperative share</summary> 
   <p  id="cd129">Report all tax deferred cooperative shares issued by an agricultural cooperative in the year using code 129.</p> 
- </details>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p> 
+</details>
  </li>
 <li class="code-num">
  <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant</summary> 
@@ -1035,6 +1038,7 @@
 </dd>
 
 </dl>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
 </details> 
 </li>
 
