--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -163,6 +163,36 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
   <h2 id="h-3">Maximum amount of expenses you can claim</h2>
 <p>An eligible individual can <strong>claim up to $50,000</strong> in qualifying costs for one qualifying renovation that was completed in the tax year. When renovation costs have been shared, more than one eligible individual can each make a claim for the same renovation up to a combined total of $50,000.</p>
 		 <p>The MHRTC is 15% of <strong>whichever amount is less</strong>:</p>
+
+ <div class="cnjnctn-type-or cnjnctn-sm">
+        <div class="cnjnctn-col">
+          <h4 class="mrgn-tp-sm text-muted">Tourism, hospitality, arts, entertainment and recreation sectors<span class="wb-inv">: Option 1 of 2</span></h4>
+          <p>The first way to have qualified for the THRP was by meeting the following three conditions:</p>
+          <ul class="fa-ul">
+            <li><span class="fas fa-check text-success fa-li"></span> More than 50% of your total eligible revenue for the prior reference periods for CEWS claim periods 1 to 13 (but excluding one of either CEWS claim period 10 or 11) came from one or more of the tourism, hospitality, arts, entertainment, or recreation activities this program supported</li>
+            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="12-month-drop" href="#12-month-drop">12-month average revenue drop from March 2020 to February <span class="nowrap">2021<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least&nbsp;40%</li>
+            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="current-month-drop" href="#current-month-drop">claim period revenue <span class="nowrap">drop<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least&nbsp;40%</li>
+          </ul>
+          <p><a href="/en/revenue-agency/services/wage-rent-subsidies/eligibility-past-subsidies/trhp-activities-qualify.html">Find out if your activities were considered part of tourism, hospitality, arts, entertainment, or recreation</a></p>
+        </div>
+        <div class="cnjnctn-col">
+          <h4 class="mrgn-tp-sm text-muted">Organizations affected by a qualifying full or partial public health restriction<span class="wb-inv">: Option 2 of 2</span></h4>
+          <p>The second way to have qualified for the THRP was introduced as the <strong>Local Lockdown Program</strong>. It was available to eligible organizations <strong>regardless of sector</strong>.</p>
+          <p>The conditions to qualify depended on which claim period you were applying for.</p>
+          <p>For claim periods 24 to 26 (December 19, 2021, to March 12, 2022), you must have met the following two conditions:</p>
+          <ul class="fa-ul">
+            <li><span class="fas fa-check text-success fa-li"></span> You were subject to <strong>either</strong> a qualifying public health restriction <strong>or</strong> a qualifying <strong>partial</strong> (capacity-limiting) public health restriction</li>
+            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="current-month-drop" href="#current-month-drop">claim period revenue <span class="nowrap">drop<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least <strong><span class="nowrap">25%</span></strong></li>
+          </ul>
+          <p>For claim periods 22, 23, 27 and 28, you must have met the following two conditions:</p>
+          <ul class="fa-ul">
+            <li><span class="fas fa-check text-success fa-li"></span> You were subject to a qualifying public health restriction</li>
+            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="current-month-drop" href="#current-month-drop">claim period revenue <span class="nowrap">drop<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least <strong><span class="nowrap">40%</span></strong></li>
+          </ul>
+          <p><a class="wb-lbx" role="button" aria-controls="pub-health" href="#pub-health">Find out what a qualifying public health restriction and a qualifying partial (capacity-limiting) public health restriction <span class="nowrap">were<span class="mrgn-lft-sm far fa-question-circle"></span></span></a></p>
+        </div>
+      </div>
+		 
  <ul class="list-unstyled cnjnctn-type-or">
   <li class="cnjnctn-col">
     <p>$50,000</p>
