--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -166,31 +166,36 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 
  <div class="cnjnctn-type-or cnjnctn-sm">
         <div class="cnjnctn-col">
-          <h4 class="mrgn-tp-sm text-muted">Tourism, hospitality, arts, entertainment and recreation sectors<span class="wb-inv">: Option 1 of 2</span></h4>
-          <p>The first way to have qualified for the THRP was by meeting the following three conditions:</p>
-          <ul class="fa-ul">
-            <li><span class="fas fa-check text-success fa-li"></span> More than 50% of your total eligible revenue for the prior reference periods for CEWS claim periods 1 to 13 (but excluding one of either CEWS claim period 10 or 11) came from one or more of the tourism, hospitality, arts, entertainment, or recreation activities this program supported</li>
-            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="12-month-drop" href="#12-month-drop">12-month average revenue drop from March 2020 to February <span class="nowrap">2021<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least&nbsp;40%</li>
-            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="current-month-drop" href="#current-month-drop">claim period revenue <span class="nowrap">drop<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least&nbsp;40%</li>
-          </ul>
-          <p><a href="/en/revenue-agency/services/wage-rent-subsidies/eligibility-past-subsidies/trhp-activities-qualify.html">Find out if your activities were considered part of tourism, hospitality, arts, entertainment, or recreation</a></p>
+          <h4 class="mrgn-tp-sm text-muted">$50,000<span class="wb-inv">: Option 1 of 2</span></h4>
+          <p>Even if the renovation cost more, the maximum you can claim is $50,000.</p>
+          <details><summary>Example: The renovation cost more than $50,000</summary>
+ <p>Jackie is eligible to claim the MHRTC on her 2023 return. Her qualifying expenditures are $70,000.</p>
+<p>Even though Jackie paid $70,000 for expenses, only the maximum of $50,000 can be claimed:</span></p>
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$50,000 in qualifying expenses</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15%</span></li>
+<li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$7,500 refundable tax credit</span></span></li>
+</ul>
+	   <p>When Jackie calculated her taxes before including the MHRTC, she had a balance owing of $2,000. With the maximum MHRTC applied, she will receive a refund of $5,500.</p>
+	  </details>
+		  
         </div>
         <div class="cnjnctn-col">
-          <h4 class="mrgn-tp-sm text-muted">Organizations affected by a qualifying full or partial public health restriction<span class="wb-inv">: Option 2 of 2</span></h4>
-          <p>The second way to have qualified for the THRP was introduced as the <strong>Local Lockdown Program</strong>. It was available to eligible organizations <strong>regardless of sector</strong>.</p>
-          <p>The conditions to qualify depended on which claim period you were applying for.</p>
-          <p>For claim periods 24 to 26 (December 19, 2021, to March 12, 2022), you must have met the following two conditions:</p>
-          <ul class="fa-ul">
-            <li><span class="fas fa-check text-success fa-li"></span> You were subject to <strong>either</strong> a qualifying public health restriction <strong>or</strong> a qualifying <strong>partial</strong> (capacity-limiting) public health restriction</li>
-            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="current-month-drop" href="#current-month-drop">claim period revenue <span class="nowrap">drop<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least <strong><span class="nowrap">25%</span></strong></li>
-          </ul>
-          <p>For claim periods 22, 23, 27 and 28, you must have met the following two conditions:</p>
-          <ul class="fa-ul">
-            <li><span class="fas fa-check text-success fa-li"></span> You were subject to a qualifying public health restriction</li>
-            <li><span class="fas fa-check text-success fa-li"></span> You had a <a class="wb-lbx" role="button" aria-controls="current-month-drop" href="#current-month-drop">claim period revenue <span class="nowrap">drop<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> of at least <strong><span class="nowrap">40%</span></strong></li>
-          </ul>
-          <p><a class="wb-lbx" role="button" aria-controls="pub-health" href="#pub-health">Find out what a qualifying public health restriction and a qualifying partial (capacity-limiting) public health restriction <span class="nowrap">were<span class="mrgn-lft-sm far fa-question-circle"></span></span></a></p>
-        </div>
+          <h4 class="mrgn-tp-sm text-muted">The amount of qualifying expenditures incurred by the eligible individual<span class="wb-inv">: Option 2 of 2</span></h4>
+          <p>You can claim the total of your qualifying expenditures, up to $50,000.</p>
+
+ <details><summary>Example: The renovation cost $50,000 or less</summary>
+ <p>James is eligible to claim the MHRTC on his 2023 return. His qualifying expenditures are $30,000:</p>
+
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$30,000 in qualifying expenses</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15%</span></li>
+<li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$4,500 refundable tax credit</span></span></li>
+</ul>
+	   <p>When James calculated his taxes before including the MHRTC, he had a balance owing of $2,000. With the maximum MHRTC applied, he will receive a refund of $2,500.</p>
+	  </details>
+		
+           </div>
       </div>
 		 
  <ul class="list-unstyled cnjnctn-type-or">
@@ -203,16 +208,8 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 	 </li> </ul>
 	 <p>Since this tax credit is refundable, you will receive a refund if the credit you claim is <strong>more</strong> than the taxes you owe.</p>
 	 
-		 <h3>Example: Claiming the maximum amount of the MHRTC</h3>
-		 <p>Jackie is eligible to claim the MHRTC on her 2023 return. Her qualifying expenditures are $70,000.</p>
-<p>Even though Jackie paid $70,000 for expenses, only the maximum of $50,000 can be claimed:</span></p>
-<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
-<li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$50,000 in qualifying expenses</span></li>
-<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15% (lowest personal income tax rate)</span></li>
-<li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$7,500 refundable tax credit</span></span></li>
-</ul>
-	   <p>When Jackie calculated her taxes before including the MHRTC, she had a balance owing of $2,000. With the maximum MHRTC applied, she will receive a refund of $5,500.</p>
-	   
+		 
+		
 
      <h2 id="h-4">Claims for more than one qualifying renovation in a year</h2>
 	   <p>If  you complete 2 qualifying renovations for 2 separate qualifying individuals, you can calculate and claim the MHRTC for each one.</p>
