--- a/subway/mghrtc/indexmaire.html
+++ b/subway/mghrtc/indexmaire.html
@@ -63,7 +63,7 @@
                      <p class="mrgn-tp-md">The Multigenerational Home Renovation Tax Credit (MHRTC) is a <strong>new</strong> refundable tax credit that can be claimed on your income tax and benefit return starting in tax year 2023.</p>
 					<p>If you are eligible, you can claim this credit for certain renovation expenses to create a <span class="nowrap">self-contained</span> secondary unit. The secondary unit must allow a senior or an adult who is eligible for the disability tax credit to live with a qualifying relative.</p>
 
-					 <p>You can claim up to $50,000 in qualifying expenditures for each qualifying renovation that is completed. The MHRTC is 15% of those costs, to a maximum of $7,500 for each claim you are eligible to make.</p>
+					 <p>You can claim up to $50,000 in qualifying expenditures for each qualifying renovation that is completed. The tax credit is 15% of your costs, up to a maximum of $7,500 for each claim you are eligible to make.</p>
 
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
