--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -841,8 +841,9 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 123 – Payments from a revoked DPSP <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 123 – Payments from a revoked DPSP <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd123">Report payments you made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 123.</p> 
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
  </details> 
 </li>
 <li class="code-num">
