--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -847,10 +847,8 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 124 – Board and lodging at special work sites</summary> 
-  <p  id="cd124">A third party (such as a prime contractor or another subcontractor) can provide board and lodging or transportation to employees of subcontractors. For example, all workers on a site can share common quarters.</p> 
- <p>Report this amount in Other information using code 124.</p>
-<p>If an employee does not usually live in a prescribed zone but works at a special work site in a prescribed zone and meets the residency requirements for the northern residents' deductions, do not include in box 028 the exempt portion for board and lodging benefits the employee receives while working at the special work site which is within 30 kilometres from the nearest urban area having a population of at least 40,000 persons. </p>
+ <details>  <summary>Code 124 – Board and lodging at special work sites <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd124">Report the tax-exempt board, lodging and housing at special work sites using code 124 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd028">code 028</a>. </p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 
  </details> 
