--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -624,6 +624,11 @@
 <dd><p>Report the total amount of the travel benefit using code 028. </p>
 <p>If you paid for medical travel assistance in a prescribed zone, report the total amount of the travel benefit using code 028 <strong>and</strong> <a href="#cd116">code 116</a> for the medical portion only</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
+
+<dt>Board and lodging </dt>
+<dd><p>Report the total amount of the board and lodging using code 028. </p>
+<p>If you paid lodging and housing at special work sites, report the total amount of the board and lodging benefit using code 028 <strong>and</strong> <a href="#cd124">code 124</a> for the tax-exempt board, lodging and housing at the special work sites </p>
+</dd>
 </dl>
 
 </details> 
