--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -874,7 +874,7 @@
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor</summary> 
+ <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd126">Report the amount for past service contributions for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
 
