--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -894,7 +894,7 @@
  </details>
 </li>
 <li class="code-num">
- <details>  <summary>Code 129 – Tax deferred cooperative share</summary> 
+ <details>  <summary>Code 129 – Tax deferred cooperative share <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd129">Report all tax deferred cooperative shares issued by an agricultural cooperative in the year using code 129.</p> 
 <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p> 
 </details>
