--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -168,7 +168,7 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
         <div class="cnjnctn-col">
           <h4 class="mrgn-tp-sm text-muted">$50,000<span class="wb-inv">: Option 1 of 2</span></h4>
           <p>Even if the renovation cost more, the maximum you can claim is $50,000.</p>
-          <details><summary>Example: The renovation cost more than $50,000</summary>
+          <details><summary>Example: The renovation cost $50,000 or more</summary>
  <p>Jackie is eligible to claim the MHRTC on her 2023 return. Her qualifying expenditures are $70,000.</p>
 <p>Even though Jackie paid $70,000 for expenses, only the maximum of $50,000 can be claimed:</span></p>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
@@ -184,7 +184,7 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
           <h4 class="mrgn-tp-sm text-muted">The amount of qualifying expenditures incurred by the eligible individual<span class="wb-inv">: Option 2 of 2</span></h4>
           <p>You can claim the total of your qualifying expenditures, up to $50,000.</p>
 
- <details><summary>Example: The renovation cost $50,000 or less</summary>
+ <details><summary>Example: The renovation cost less than $50,000</summary>
  <p>James is eligible to claim the MHRTC on his 2023 return. His qualifying expenditures are $30,000:</p>
 
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
