--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -961,7 +961,7 @@ input[type='radio'] {
             
 
                 
-<p>[Rescue link to vacant tax?]</p>
+<p><strong>[Rescue link to vacant tax?]</strong></p>
 
                 <section>
                     <nav aria-label="Section menu">
