--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -794,17 +794,17 @@ margin-left: 38px;
          </section>
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Who must file a return and pay the tax</h1>
-		 <p>[Rescue link to vacant tax?]</p>
+		
          
 		<p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada if <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
 				
 				 <ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
  					 <li class="cnjnctn-col">
-   						 <p>The property is a residential property</li>
+   						 <p>The property is a <strong>residential property</strong></li>
  					 <li class="cnjnctn-col">
-  						  <p>You are an owner of the residential property </li>
+  						  <p>You are an <strong>owner</strong> of the residential property </li>
  					 <li class="cnjnctn-col">
-						 <p>You are <strong>not</strong> an <strong>excluded owner</strong> of the residential property</li>
+						 <p>You are an <strong>affected owner</strong> of the residential property</li>
 				</ul>
 		 
 		 <details>
