--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -71,9 +71,9 @@
             <p>Depending on your income and other circumstances, you may be eligible for the Canada workers benefit (CWB).</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Eligibility for the basic amount</a></li>
-               <li><a href="#h-2">Eligibility for the disability supplement</a></li>
-               <li><a href="#h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</a></li>
+               <li><a href="#h-1">Basic amount eligibility</a></li>
+               <li><a href="#h-2">Disability supplement eligibility</a></li>
+               <li><a href="#h-3">Advanced Canada workers benefit eligibility</a></li>
                <li><a href="#h-4">Life changes that affect the ACWB</a></li>
             </ul>
             <h2 id="h-1">Eligibility for the basic amount</h2>
