--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -116,9 +116,9 @@
 		 </ul>
 		 
             <h2 id="h-2">Eligibility for the disability supplement</h2>
-            <p>You may be eligible for the disability supplement of the CWB if:</p>
+            <p>You may be eligible for the disability supplement of the CWB if you:</p>
 		 <ul class="fa-ul">
-	<li><span class="fas fa-check text-success fa-li"></span>you are eligible for the disability tax credit and have an approved Form <a href="/en/revenue-agency/services/forms-publications/forms/t2201.html">T2201, Disability Tax Credit Certificate</a>, on file with the CRA</li>
+	<li><span class="fas fa-check text-success fa-li"></span>are eligible for the disability tax credit and have an approved Form <a href="/en/revenue-agency/services/forms-publications/forms/t2201.html">T2201, Disability Tax Credit Certificate</a>, on file with the CRA</li>
 		 </ul>
 		 
             <h2 id="h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</h2>
