--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -76,7 +76,7 @@
                <li><a href="#h-3">Advanced Canada workers benefit eligibility</a></li>
                <li><a href="#h-4">Life changes that affect the ACWB</a></li>
             </ul>
-            <h2 id="h-1">Eligibility for the basic amount</h2>
+            <h2 id="h-1">Basic amount eligibility</h2>
             <p>You are eligible for the basic amount of the CWB if you:</p>
             <ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span> 
@@ -115,13 +115,13 @@
 				<li><span class="fas fa-check text-success fa-li"></span>is not eligible for the CWB</li>
 		 </ul>
 		 
-            <h2 id="h-2">Eligibility for the disability supplement</h2>
+            <h2 id="h-2">Disability supplement eligibility</h2>
             <p>You may be eligible for the disability supplement of the CWB if you:</p>
 		 <ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span>are eligible for the disability tax credit and have an approved Form <a href="/en/revenue-agency/services/forms-publications/forms/t2201.html">T2201, Disability Tax Credit Certificate</a>, on file with the CRA</li>
 		 </ul>
 		 
-            <h2 id="h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</h2>
+            <h2 id="h-3">Advanced Canada workers benefit eligibility</h2>
             <p>If you are eligible for and entitled to receive the CWB, you can get up to 50% of your CWB in advance payments under the ACWB. If you are entitled to receive the disability supplement, you will also receive 50% of your disability supplement amount with your basic ACWB.</p>
 <p>You must be a resident of Canada on the first day of the quarter to be eligible for the ACWB issuance.</p>
 		 
