--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -71,16 +71,16 @@
             <p>The amount you can expect to receive for the Canada workers benefit (CWB) depends on <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-workers-benefit/net-income-not-eligible.html">your income and your province or territory of residence</a>.</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">The maximum basic CWB</a></li>
-               <li><a href="#h-2">The maximum disability supplement</a></li>
-               <li><a href="#h-3">How the CRA calculates your CWB payment amount</a></li>
-               <li><a href="#h-4">How to calculate the ACWB payment amount</a></li>
-		                   <li><a href="#h-5">How the CRA will determine the recipient for married or common-law spouses</a></li>
-		    		                   <li><a href="#h-6">Advanced Canada workers benefit payment dates</a></li>
+               <li><a href="#h-1">Basic benefit maximum amount</a></li>
+               <li><a href="#h-2">Disability supplement maximum amount</a></li>
+               <li><a href="#h-3">How we calculate your CWB payment amount</a></li>
+               <li><a href="#h-4">Calculating your advanced payments</a></li>
+		                   <li><a href="#h-5">How we determine the recipient for married or common-law spouses</a></li>
+		    		                   <li><a href="#h-6">Advanced payment dates for the Canada workers benefit</a></li>
 
 
             </ul>
-            <h2 id="h-1">The maximum basic CWB</h2>
+            <h2 id="h-1">Basic benefit maximum amount</h2>
             <p>The maximum basic amount for the CWB is:</p>
             <ul>
 	<li> 
@@ -93,7 +93,7 @@
             <p>The maximum basic CWB amount will vary for residents of Quebec, Nunavut and Alberta.
          
 		 
-            <h2 id="h-2">The maximum disability supplement</h2>
+            <h2 id="h-2">Disability supplement maximum amount</h2>
             <p>The maximum amount for the disability supplement is:</p>
 		 <ul>
 			 <li><p><strong>$737 for single individuals</strong></p>
@@ -104,7 +104,7 @@
 			 <p>The maximum amount for the disability supplement will vary for residents of Quebec and Nunavut.
 		 
 		 
-            <h2 id="h-3">How the CRA calculates your CWB payment amount</h2>
+            <h2 id="h-3">How we calculate your CWB payment amount</h2>
             <p>The Canada Revenue Agency (CRA) uses all of the following information to calculate your CWB:</p>
 		 <ul>
 			 <li>marital status - <a href="eligible.html#h-1-1">eligible spouse</a></li>
@@ -115,12 +115,12 @@
 			 <li>eligibility for the disability tax credit</li>
 		 </ul>
 		 
-		 <h2 id="h-4">How to calculate the ACWB payment amount</h2>
+		 <h2 id="h-4">Calculating your advanced payments</h2>
             <p>The Advanced Canada workers benefit (ACWB) will always be equal to 50% of your CWB that was calculated on your income tax and benefit return.</p>
 <p>You can estimate your ACWB payments by using the <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/child-family-benefits-calculator.html">child and family benefit calculator</a>. Note: you must enter the information based on your situation as of December 31 provided on your income tax and benefit return.</p>
 		 <p>A change in the eligibility which occurs during a quarter will not impact the ACWB payment amount for the current quarter.</p>
 		
-		 		 <h2 id="h-5">How the CRA will determine the recipient for married or common-law spouses</h2>
+		 		 <h2 id="h-5">How we determine the recipient for married or common-law spouses</h2>
 		 <p>Only one spouse will receive the ACWB payment.</p>
 
 		 
@@ -131,7 +131,7 @@
 		 <p>If you and your spouse are both eligible for the ACWB and one of you is also eligible for the disability tax credit, the person with the disability will receive the basic amount for the family and their disability supplement payment.</p>
 		 <p>If you and your spouse are both eligible for the ACWB and the disability tax credit, only one of you will receive the basic amount for the family. However, each of you will receive your own disability supplement.</p>
 		 
-		 		 		 <h2 id="h-6">Advanced Canada workers benefit payment dates</h2>
+		 		 		 <h2 id="h-6">Advanced payment dates for the Canada workers benefit</h2>
 		 <p>The ACWB is issued in 3 quarterly payments on the 12 of July, October, and January.</p>
 		 <p>In the first year, the first quarterly payment will be issued on July 28, 2023. The two remaining quarterly payments will be issued on October 12, 2023 and January 12, 2024.</p>
 		 <p>When the issuance date falls on a Saturday, a Sunday, or a federal statutory holiday, the payment will be made on the last business day prior to the issuance date.</p>
