--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -107,12 +107,12 @@
             <h2 id="h-3">How we calculate your CWB payment amount</h2>
             <p>The Canada Revenue Agency (CRA) uses all of the following information to calculate your CWB:</p>
 		 <ul>
-			 <li>marital status - <a href="eligible.html#h-1-1">eligible spouse</a></li>
-			 <li>province or territory of residence</li>
-			 <li>earned working income</li>
-			 <li>adjusted family net income</li>
-			 <li><a href="eligible.html#h-1-1-1">eligible dependant</a></li>
-			 <li>eligibility for the disability tax credit</li>
+			 <li>Marital status - <a href="eligible.html#h-1-1">eligible spouse</a></li>
+			 <li>Province or territory of residence</li>
+			 <li>Earned working income</li>
+			 <li>Adjusted family net income</li>
+			 <li><a href="eligible.html#h-1-1-1">Eligible dependant</a></li>
+			 <li>Eligibility for the disability tax credit</li>
 		 </ul>
 		 
 		 <h2 id="h-4">Calculating your advanced payments</h2>
