--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -75,9 +75,9 @@
 		     <li><a href="#h-1">Expenses that qualify</a></li>
                <li><a href="#h-2">Expenses that do not qualify</a></li>
 	                   <li><a href="#h-3">Maximum amount of expenses you can claim</a></li>
-
+	    <ul>
               
-              	                   <li><a href="#h-4">Claims for more than one qualifying renovation in a year</a></li>
+              	                   <li><a href="#h-1-1">Claims for more than one qualifying renovation in a year</a></li></ul>
 
             </ul>
 		           
@@ -204,7 +204,7 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 		 
 		
 
-     <h2 id="h-4">Claims for more than one qualifying renovation in a year</h2>
+     <h3 id="h-1-1">Claims for more than one qualifying renovation in a year</h3>
 	   <p>If  you complete 2 qualifying renovations for 2 separate qualifying individuals, you can calculate and claim the MHRTC for each one.</p>
 	   <details><summary>Example: Completing 2 qualifying renovations in the same year</summary>
 		   <p>Des is related to three qualifying individuals: her brother, her mother, and her father. </p>
