--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -252,7 +252,7 @@
 	      	   <h2 id="h-3">Sharing renovation costs</h2>
 	      <p>Some families may choose to share the renovation costs between two or more family members. When this happens, the credit may be split between them as long as certain conditions are met.</p>
 	      <p>
-			Refer to: <a href="claimmaire.html">How to claim</a></p>
+			Refer to: <a href="claimmaire.html#h-2">Splitting the credit between eligible individuals</a></p>
 
 	   	      	   <h2 id="h-4">Examples of situations that do and do not qualify</h2>
 
