--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Who is eligible - Canada workers benefit - Canada.ca</title>
+         <title>Who is eligible - Canada Workers Benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -48,7 +48,7 @@
                 title: "Tax credits and benefits for individuals",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "Canada workers benefit",
+                title: "Canada Workers Benefit",
                 href: "index.html"
               }
               ],
@@ -59,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>Canada workers benefit</h1>
+               <h1>Canada Workers Benefit</h1>
                <ul>
                   <li><a href="eligible.html" class="active">Who is eligible</a></li>
                   <li><a href="claim.html">How to claim</a></li>
@@ -68,12 +68,12 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Who is eligible</h1>
-            <p>Depending on your income and other circumstances, you may be eligible for the Canada workers benefit (CWB).</p>
+            <p>Depending on your income and other circumstances, you may be eligible for the Canada Workers Benefit (CWB).</p>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Basic amount eligibility</a></li>
                <li><a href="#h-2">Disability supplement eligibility</a></li>
-               <li><a href="#h-3">Advanced Canada workers benefit eligibility</a></li>
+               <li><a href="#h-3">Advanced Canada Workers Benefit Eligibility</a></li>
                <li><a href="#h-4">Life changes that affect the ACWB</a></li>
             </ul>
             <h2 id="h-1">Basic amount eligibility</h2>
@@ -100,7 +100,7 @@
 			 
 	<li><span class="fas fa-check text-success fa-li"></span>Is a resident of Canada throughout the year</li>
 		 </ul>
-		 <p>Your spouse or common-law partner <strong>Is not an eligible spouse for the CWB purposes</strong> if they:
+		 <p>Your spouse or common-law partner <strong>is not an eligible spouse for the CWB purposes</strong> if they:
 			 
 		  <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li"></span>Are enrolled as a full-time student at a designated educational institution for more than 13 weeks in the year unless, on December 31, they have an eligible dependant</li>
@@ -121,7 +121,7 @@
 	<li><span class="fas fa-check text-success fa-li"></span>Are eligible for the disability tax credit and have an approved Form <a href="/en/revenue-agency/services/forms-publications/forms/t2201.html">T2201, Disability Tax Credit Certificate</a>, on file with the CRA</li>
 		 </ul>
 		 
-            <h2 id="h-3">Advanced Canada workers benefit eligibility</h2>
+            <h2 id="h-3">Advanced Canada Workers Benefit Eligibility</h2>
             <p>If you are eligible for and entitled to receive the CWB, you can get up to 50% of your CWB in advance payments under the ACWB. If you are entitled to receive the disability supplement, you will also receive 50% of your disability supplement amount with your basic ACWB.</p>
 <p>You must be a resident of Canada on the first day of the quarter to be eligible for the ACWB issuance.</p>
 		 
