--- a/subway/acwb/index.html
+++ b/subway/acwb/index.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Canada workers benefit - Canada.ca</title>
+         <title>Canada Workers Benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -57,13 +57,13 @@
          <main role="main" property="mainContentOfPage" class="container">
             <div aria-hidden="true">
                <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted"> </p>
-               <h1 class="gc-thickline mrgn-tp-0">Canada workers benefit</h1>
+               <h1 class="gc-thickline mrgn-tp-0">Canada Workers Benefit</h1>
                <div class="row">
                   <div class="col-md-8">
-                     <p>The Canada workers benefit (CWB) is a refundable tax credit to help individuals and families who are working and earning a low income.</p>
+                     <p>The Canada Workers Benefit (CWB) is a refundable tax credit to help individuals and families who are working and earning a low income.</p>
                      <p>The CWB has two parts: a basic amount and a disability supplement.</p>
                      <p>You can claim the CWB when you file your income tax return.</p>
-                     <p>Starting in July 2023 and based on the 2022 taxation year, the <strong>Advanced Canada workers benefit (ACWB) </strong>will provide advance payments equivalent to 50% of the CWB across 3 quarterly payments. The remaining amount will be paid during the following tax season. This initiative puts more money in the workers' pockets to help cope with the rising cost of living.</p>
+                     <p>Starting in July 2023 and based on the 2022 taxation year, the <strong>Canada Workers Benefit</strong>will provide <strong>advance</strong> payments equivalent to 50% of the CWB across 3 quarterly payments. The remaining amount will be paid during the following tax season. This initiative puts more money in the workers' pockets to help cope with the rising cost of living.</p>
                    <div class="alert alert-info">
                         <h4>Payment dates for this year</h4>
                         
