--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -122,23 +122,23 @@
 		 </ul>
 		 
             <h2 id="h-3">Advanced Canada Workers Benefit Eligibility</h2>
-            <p>If you are eligible for and entitled to receive the CWB, you can get up to 50% of your CWB in advance payments under the ACWB. If you are entitled to receive the disability supplement, you will also receive 50% of your disability supplement amount with your basic ACWB.</p>
-<p>You must be a resident of Canada on the first day of the quarter to be eligible for the ACWB issuance.</p>
+            <p>If you are eligible for and entitled to receive the CWB, you can get up to 50% of your CWB in advanced payments. If you are entitled to receive the disability supplement, you will also receive 50% of your disability supplement amount with your basic advanced payment.</p>
+<p>You must be a resident of Canada on the first day of the quarter to be eligible for the advance issuance.</p>
 		 
-		 <h2 id="h-4">Life changes that affect the ACWB</h2>
-            <p>The only life event changes that will affect the ACWB are death, incarceration, or emigration.</p>
+		 <h2 id="h-4">Life changes that affect the advanced payments</h2>
+            <p>The only life event changes that will affect the advanced payments are death, incarceration, or emigration.</p>
 		 <p>If there is another change to your situation (like a change in marital status, eligible dependent(s) or a move) it will be reflected in your payments after you submit your next tax and benefit return.</p>
 		 
-		 <h3>Circumstances that change your eligibility for the ACWB</h3>
-		 <p>You are not eligible for any remaining ACWB payments for the benefit year if you:</p>
+		 <h3>Circumstances that change your eligibility for the advanced payments</h3>
+		 <p>You are not eligible for any remaining advanced payments for the benefit year if you:</p>
 		   <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li"></span>Are incarcerated for a period of 90 consecutive days or more</li>
 			     
 			   <li><span class="fas fa-times text-danger fa-li"></span>Emigrated from Canada</li>
 		 </ul>
 		 <p>However, you remain eligible for any payment periods prior to the event.</p>
-		 <h3>Deceased individuals are not eligible for the ACWB</h3>
-		 <p>An individual deceased prior to July 1 of the benefit year is not eligible to receive the ACWB.</p>
+		 <h3>Deceased individuals are not eligible for advanced payments</h3>
+		 <p>An individual deceased prior to July 1 of the benefit year is not eligible to receive advanced payments.</p>
 		 
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
