--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>How much you can get - Canada workers benefit - Canada.ca</title>
+         <title>How much you can get - Canada Workers Benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -48,7 +48,7 @@
                 title: "Tax credits and benefits for individuals",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "Canada workers benefit",
+                title: "Canada Workers Benefit",
                 href: "index.html"
               }
               ],
@@ -59,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>Canada workers benefit</h1>
+               <h1>Canada Workers Benefit</h1>
                <ul>
                   <li><a href="eligible.html">Who is eligible</a></li>
                   <li><a href="claim.html">How to claim</a></li>
@@ -68,7 +68,7 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How much you can get</h1>
-            <p>The amount you can expect to receive for the Canada workers benefit (CWB) depends on <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-workers-benefit/net-income-not-eligible.html">your income and your province or territory of residence</a>.</p>
+            <p>The amount you can expect to receive for the Canada Workers Benefit (CWB) depends on <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/canada-workers-benefit/net-income-not-eligible.html">your income and your province or territory of residence</a>.</p>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Basic benefit maximum amount</a></li>
@@ -116,23 +116,28 @@
 		 </ul>
 		 
 		 <h2 id="h-4">Calculating your advanced payments</h2>
-            <p>The Advanced Canada workers benefit (ACWB) will always be equal to 50% of your CWB that was calculated on your income tax and benefit return.</p>
-<p>You can estimate your ACWB payments by using the <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/child-family-benefits-calculator.html">child and family benefit calculator</a>. Note: you must enter the information based on your situation as of December 31 provided on your income tax and benefit return.</p>
-		 <p>A change in the eligibility which occurs during a quarter will not impact the ACWB payment amount for the current quarter.</p>
+            <p>The advanced Canada Workers Benefit will always be equal to 50% of your CWB that was calculated on your income tax and benefit return.</p>
+<p>You can estimate your advanced payments by using the <a href="https://www.canada.ca/en/revenue-agency/services/child-family-benefits/child-family-benefits-calculator.html">child and family benefit calculator</a>. Note: you must enter the information based on your situation as of December 31 provided on your income tax and benefit return.</p>
+		 <p>A change in the eligibility which occurs during a quarter will not impact the advanced payment amount for the current quarter.</p>
 		
 		 		 <h2 id="h-5">How we determine the recipient for married or common-law spouses</h2>
-		 <p>Only one spouse will receive the ACWB payment.</p>
+		 <p>Only one spouse will receive the advanced payment.</p>
 
 		 
 		 <h3>When neither spouse is entitled to a disability supplement</h3>
-		 <p>For couples, the ACWB basic amount is sent to the spouse with the higher working income. If both spouses have the same working income, the ACWB basic amount is paid to the first filer.</p>
+		 <p>For couples, the advanced basic amount is sent to the spouse with the higher working income. If both spouses have the same working income, the advanced basic amount is paid to the first filer.</p>
 		 
 		 <h3>When one or both spouses is entitled to receive the disability supplement</h3>
-		 <p>If you and your spouse are both eligible for the ACWB and one of you is also eligible for the disability tax credit, the person with the disability will receive the basic amount for the family and their disability supplement payment.</p>
-		 <p>If you and your spouse are both eligible for the ACWB and the disability tax credit, only one of you will receive the basic amount for the family. However, each of you will receive your own disability supplement.</p>
+		 <p>If you and your spouse are both eligible for the advanced payments and one of you is also eligible for the disability tax credit, the person with the disability will receive the basic amount for the family and their disability supplement payment.</p>
+		 <p>If you and your spouse are both eligible for the advanced payments and the disability tax credit, only one of you will receive the basic amount for the family. However, each of you will receive your own disability supplement.</p>
 		 
-		 		 		 <h2 id="h-6">Advanced payment dates for the Canada workers benefit</h2>
-		 <p>The ACWB is issued in 3 quarterly payments on the 12 of July, October, and January.</p>
+		 		 		 <h2 id="h-6">Advanced payment dates for the Canada Workers Benefit</h2>
+		 <p>The CWB is issued in 3 quarterly payments, on:</p>
+		 <ul>
+			<li>July 12</li> 
+			 <li>October 12</li> 
+			 <li>January 12</li>
+		 </ul>
 <div class="alert alert-info">
                         <h4>Payment dates for this year</h4>
                         
