--- a/subway/acwb/claim.html
+++ b/subway/acwb/claim.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>How to claim - Canada workers benefit - Canada.ca</title>
+         <title>How to claim - Canada Workers Benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -48,7 +48,7 @@
                 title: "Tax credits and benefits for individuals",
                 href: "https://www.canada.ca/en/services/taxes/child-and-family-benefits.html"
               },{
-                title: "Canada workers benefit",
+                title: "Canada Workers Benefit",
                 href: "index.html"
               }
               ],
@@ -59,7 +59,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
             <nav class="gc-subway provisional">
-               <h1>Canada workers benefit</h1>
+               <h1>Canada Workers Benefit</h1>
                <ul>
                   <li><a href="#">Who is eligible</a></li>
                   <li><a href="#" class="active">How to claim</a></li>
@@ -68,7 +68,7 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How to claim</h1>
-            <p>You can claim the Canada workers benefit (CWB) when you file your tax return. The Advanced Canada workers benefit (ACWB) will be issued to you automatically.</p>
+            <p>You can claim the Canada Workers Benefit (CWB) when you file your tax return. The advanced payments will be issued to you automatically.</p>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Claim the CWB</a></li>
@@ -93,8 +93,8 @@
 		
 		 
             <h2 id="h-2">Advance payments are sent automatically</h2>
-            <p>You don't need to apply to receive the Advanced Canada workers benefit (ACWB). The Canada Revenue Agency (CRA) will determine your eligibility when you file your income tax and benefit return. If you're entitled to a CWB amount on line 45300 of your income tax and benefit return, the CRA will automatically send you payments.</p>
-		 <p>To receive the ACWB, the CRA must receive your income tax and benefit return before November 1 of the benefit period.</p>
+            <p>You don't need to apply to receive the advanced payments of the CWB. The Canada Revenue Agency (CRA) will determine your eligibility when you file your income tax and benefit return. If you're entitled to a CWB amount on line 45300 of your income tax and benefit return, the CRA will automatically send you payments.</p>
+		 <p>To receive the advanced payments, the CRA must receive your income tax and benefit return before November 1 of the benefit period.</p>
 		 
 		 
             <nav class="gc-subway-pagination">
