--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -74,7 +74,7 @@
                <li><a href="#h-1">Basic amount eligibility</a></li>
                <li><a href="#h-2">Disability supplement eligibility</a></li>
                <li><a href="#h-3">Advanced Canada Workers Benefit Eligibility</a></li>
-               <li><a href="#h-4">Life changes that affect the ACWB</a></li>
+               <li><a href="#h-4">Life changes that affect the advanced payments</a></li>
             </ul>
             <h2 id="h-1">Basic amount eligibility</h2>
             <p>You are eligible for the basic amount of the CWB if you:</p>
