--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -794,7 +794,8 @@ margin-left: 38px;
            
 		
 	  
-		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, you must file an Underused Housing Tax return for the calendar year. Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return.</p> 
+		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
+		 <p>Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return.</p> 
 		 <p><span class="h4">Download:</span> <a href="https://canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" class="mrgn-tp-md"><span class="far fa-file-alt fa-lg mrgn-rght-sm"></span>Underused Housing Tax return (UHT-2900)</a> </p>	
 		  
 		 
