--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -796,9 +796,34 @@ margin-left: 38px;
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
 		 <p>Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return.</p> 
+		
 		 <p><span class="h4">Download:</span> <a href="https://canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" class="mrgn-tp-md"><span class="far fa-file-alt fa-lg mrgn-rght-sm"></span>Underused Housing Tax return (UHT-2900)</a> </p>	
 		  
-		 
+	        <h2 id="how">Filling out the return</h2>
+<p>Fill out each section of the Underused Housing Tax return (UHT-2900) </p>
+<ol class="lst-stps stps-strpd">
+<li><h3>Part 1 - Information about the owner </h3>
+Content
+</li>
+<li><h3>Gather your documents</h3>
+Your application must include:<ul>
+<li>your printed application form</li>
+<li>the original, certified, or notarized copies of your supporting documents</li>
+</ul>
+We will return any original documents that you submit. We will not return certified copies of documents.</li>
+<li><h3>Mail your application</h3>
+Mail or courier your signed application and documents to the CRA.<br><p>Attn: ITN unit<br>
+Services and Benefits<br>
+Section Benefits Division<br>
+Sudbury Tax Centre<br>
+1050 Notre Dame Ave<br>
+Sudbury ON P3A 5C1<br>
+Canada</p>
+</li>
+	<li><h3>Content</h3>
+Explanatory content
+</li>
+</ol>	 
 		
 		 
 		 
