--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,8 +797,18 @@ margin-left: 38px;
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
 		 <p>Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return.</p> 
 		
-		 <p><span class="h4">Download:</span> <a href="https://canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" class="mrgn-tp-md"><span class="far fa-file-alt fa-lg mrgn-rght-sm"></span>Underused Housing Tax return (UHT-2900)</a> </p>	
-		  
+			
+
+
+<h3>What return form to use</h3>
+<ul class="fa-ul">
+<li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900 Underused Housing Tax Return and Election Form</a></li>
+</ul>
+
+
+
+
+		 
 	        <h2 id="how">Filling out the return</h2>
 <p>Fill out each section of the Underused Housing Tax return (UHT-2900) </p>
 <ol class="lst-stps stps-strpd">
