--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -19,6 +19,7 @@
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="../css/cews.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+	      <link rel="stylesheet" href="/etc/designs/canada/wet-boew/méli-mélo/2022-06-banff.min.css" crossorigin="anonymous" integrity="sha256-U4zJDUfEM+oSLu2XowfzlMrtFeOhsNCSmuVy3v2ktEg="/>
          <!-- Write closure template -->
          <script type="text/javascript">
             document.write(wet.builder.refTop({
