--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -810,7 +810,7 @@ margin-left: 38px;
 
 
 		 
-	        <h2 id="how">Filling out the return</h2>
+	        <h2>Filling out the return</h2>
 <p>Fill out each section of the Underused Housing Tax return (UHT-2900) </p>
 <ol class="lst-stps stps-strpd">
 <li><h3>Part 1 - Information about the owner </h3>
