chunk - det.res

--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -829,9 +829,23 @@ margin-left: 38px;
       <p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
       <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
      
-</p>        [Determine taxable value vs. fair market value] </p>
+</p>        [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">taxable value</a> vs. <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
 
-
+<details>
+	<summary>Acceptable Professional Associations and Designations</summary>
+	<ul>
+		<li>Appraisal Institue of Canada (AIC)</li>
+		<ul><li>Accredited Appraiser Canadian Institute (AACI)</li></ul>
+		<ul><li>Canadian Residential Appraiser (CRA)</li></ul>
+		<li>Canadian National Association of Real Estate Appraisers</li>
+		<ul><li>Designated Appraiser Residential (DAR)</li></ul>
+		<ul><li>Designated Appraiser Commercial (DAC)</li></ul>
+		<li>Ordre des évaluateurs agréés du Québec (OEAQ)</li>
+		<ul><li>Chartered Appraiser (C.App./É.A.)</li></ul>
+	</ul>
+<p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
+	
+</details>
 
 
 
