add to- content go thru

--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -842,7 +842,8 @@ margin-left: 38px;
 <p>In most situations, if you are an affected owner you must pay the Underused Housing Tax for the calendar year for each residential property you own on December 31. However, if your ownership qualifies for an exemption, you will not have to pay the tax for the calendar year.</p>
 	<p>Even if your ownership of a residential property qualifies for an exemption for the calendar year, you must still file an annual return for the property for the calendar year.</p>
 <p>If you are uncertain about your obligations and liabilities under the UHTA, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
-		 
+		 <p>If you are an affected owner of a residential property, you must file an annual return. Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return. </p>
+	<p>Only excluded owners do not have to file a return.</p>
 		 <p>If you are an affected owner of a residential property, you must file a return for the Underused Housing Tax. You must also pay the 1% tax unless your ownership of the property qualifies for an exemption.</p>
 	<p>[Remember that even if you do not have to pay the Underused Housing Tax because your ownership of a residential property qualifies for an exemption for a calendar year, you still have to file an annual return for the property for the calendar year.] - repeated in tool</p>
 		 </details>
