--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -801,9 +801,10 @@ margin-left: 38px;
 		   <h3>Tax identifier numbers</h3>
       <p>You must have a valid CRA tax identifier number to file your Underused Housing Tax return. The following tax identifier numbers may be used depending on the situation:</p>
       <ul>
-        <li>a social insurance number (SIN)</li>
-        <li>an individual tax number (ITN)</li>
-        <li>a Canadian business number (BN) with an Underused Housing Tax (RU) program account identifier code</li>
+        <li>A social insurance number (SIN)</li>
+        <li>An individual tax number (ITN)</li>
+<li>A temporary tax number (TTN)</li>
+        <li>A Canadian business number (BN) with an Underused Housing Tax (RU) program account identifier code</li>
       </ul>
 
  
