--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -814,7 +814,7 @@ margin-left: 38px;
 
 
         <details><summary>Tax identifier numbers for individuals</summary>
-        <p>Depending on your citizenship, if you are an individual, you must file your Underused Housing Tax return using either a SIN or an ITN.</p>
+        <p>Depending on your citizenship, if you are an individual, you must file your Underused Housing Tax return using either a SIN, an ITN, or a TTN.</p>
         <p>If you are an individual who is a <strong>Canadian citizen or permanent resident</strong>, you <strong>must use a SIN</strong> to file your return.</p>
         <p>If you do not already have a SIN, please contact <a href="https://canada.ca/en/employment-social-development/services/sin.html">Service Canada</a> for information on how to apply for one.</p>
         <p>If you are an individual who is <strong>not a Canadian citizen or permanent resident</strong>, and you already have a SIN, you must use your SIN to file your return.</p>
