--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -819,9 +819,15 @@ margin-left: 38px;
         <p>If you do not already have a SIN, please contact <a href="https://canada.ca/en/employment-social-development/services/sin.html">Service Canada</a> for information on how to apply for one.</p>
         <p>If you are an individual who is <strong>not a Canadian citizen or permanent resident</strong>, and you already have a SIN, you must use your SIN to file your return.</p>
         <p>If you <strong>do not have a SIN</strong>, you <strong>must use an ITN</strong> to file your return. If you do not have an ITN, you must apply for one.</p>
-        <p>Download: <a href="https://canada.ca/en/revenue-agency/services/forms-publications/forms/t1261.html"><span class="far fa-file-alt fa-lg mrgn-rght-sm"></span>Application for a CRA individual tax number (ITN) for non-residents (Form T1261)</a></p>
-<p>[Link to new ITN page]</p>	  
-</details>
+       
+	
+			
+		<p>If you are a non-resident needing an ITN, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html">Applying for an individual tax number (ITN)</a></p>	  
+
+	
+	
+	
+	</details>
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
         <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
