intro statement to steps

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -811,7 +811,7 @@ margin-left: 38px;
 
 		 
 	        <h2>Filling out the return</h2>
-<p>Fill out each section of the Underused Housing Tax return (UHT-2900) </p>
+<p>Follow the steps below to help you fill out the sections of the Underused Housing Tax return (UHT-2900). </p>
 <ol class="lst-stps stps-strpd">
 <li><h3>Part 1 - Information about the owner </h3>
 Content
