--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -824,7 +824,7 @@ margin-left: 38px;
 			
 		<p>If you are a non-resident needing an ITN, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html">Applying for an individual tax number (ITN)</a></p>	  
 
-	
+	<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out Form T1261 and attaching it to your completed paper UHT return. Make sure to submit your Form T1261, all required supporting documentation, and your UHT return together.  </p>
 	
 	
 	</details>
